cmake_minimum_required(VERSION 2.8)
project( lab5 )
INCLUDE(/usr/local/share/cmake-2.8/Modules)
find_package( OpenCV REQUIRED )
find_package( CUDA REQUIRED )
CUDA_ADD_EXECUTABLE( lab5 lab5.cu )
target_link_libraries( lab5 ${OpenCV_LIBS} )
INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})
SET(CMAKE_C_COMPILER g++)
add_definitions("$(pkg-config opencv --libs)")
target_link_libraries(lab5 ${CUDA_LIBRARIES})
